--- a/机器学习课程设计报告.md
+++ b/机器学习课程设计报告.md
@@ -16,7 +16,7 @@
 
 首先，**临床实用价值**。贫血是临床上最常见的疾病之一，建立准确的智能诊断模型可以直接应用于临床实践，辅助医生进行快速诊断，提高医疗服务的质量和效率。
 
-其次，**技术挑战性**。本数据集存在严重的类别不平衡问题（少数类样本仅占1%左右），这对机器学习算法提出了挑战。通过本次设计，可以深入理解数据不平衡问题的处理方法，如类别权重调整[^9]、SMOTE技术[^8]等，提升解决实际问题的能力。
+其次，**技术挑战性**。本数据集存在严重的类别不平衡问题（不平衡比例高达63.4:1），这对机器学习算法提出了挑战。通过本次设计，可以深入理解数据不平衡问题的处理方法，如类别权重调整[^9]、SMOTE技术[^8]等，提升解决实际问题的能力。
 
 再次，**多学科交叉**。该项目融合了医学、统计学和计算机科学的知识，通过分析真实的医学数据，学习如何将机器学习技术应用于医疗健康领域，培养跨学科的综合素养。
 
@@ -33,54 +33,55 @@
 **数据集特征**：
 
 - **样本数量**：15,300条记录
-- **特征维度**：24个血液检测指标，包括白细胞计数、红细胞参数、血红蛋白、血小板指标、血清铁、铁蛋白、维生素B12、叶酸等生化指标
+- **特征维度**：29个血液检测指标，包括白细胞计数、红细胞参数、血红蛋白、血小板指标、血清铁、铁蛋白、维生素B12、叶酸等生化指标
 - **目标变量**：多分类问题，共5个类别
-  - 类别0：无贫血（No anemia），约占52%
-  - 类别1：HGB贫血（HGB-anemia），约占20%
-  - 类别2：缺铁性贫血（Iron deficiency），约占25%
-  - 类别3：叶酸缺乏（Folate deficiency），约占1%
-  - 类别4：维生素B12缺乏（B12 deficiency），约占2%
+  - 类别0：无贫血（No anemia），约占63.58%
+  - 类别1：HGB贫血（HGB-anemia），约占6.67%
+  - 类别2：缺铁性贫血（Iron deficiency），约占27.45%
+  - 类别3：叶酸缺乏（Folate deficiency），约占1.00%
+  - 类别4：维生素B12缺乏（B12 deficiency），约占1.30%
 
-**数据不平衡比例**：最严重的不平衡比例达到657:1（类别0 vs 类别4），这是一个典型的不平衡分类问题。
+**数据不平衡比例**：最严重的不平衡比例达到63.63:1（类别0 vs 类别3），这是一个典型的不平衡分类问题。
 
 ### 2.2 数据清洗过程
 
 在原始数据集的基础上，进行了以下数据清洗操作：
 
-**（1）删除重复值**
-使用pandas的 `drop_duplicates()`函数检测并删除重复记录。经检查发现数据集中存在88条完全重复的记录，这些重复样本会导致模型过度重视某些特定模式，因此予以删除。清洗后剩余14,212条有效记录。
+**（1）探索性分析**\n通过代码检查，数据集中存在若干**数据泄露特征**：
+- **Folate_anemia_class**：直接编码了叶酸缺乏症的诊断结果
+- **B12_Anemia_class**：直接编码了维生素B12缺乏症的诊断结果
+- 这些特征实际上是诊断标签的一部分，如果作为输入特征，将导致模型"作弊"（用答案预测答案），产生虚高的准确率（98%+），在实际应用中完全无效。
 
-**（2）处理缺失值**
-通过 `df.isnull().sum()`统计发现，部分生化指标（如FERRITTE、B12）存在少量缺失值。考虑到这些指标对贫血诊断具有重要意义，采用中位数填充法进行补全，保留其分布特征。
+**（2）删除重复值**\n使用pandas的 `drop_duplicates()`函数检测并删除重复记录。经检查发现数据集中存在88条完全重复的记录，这些重复样本会导致模型过度重视某些特定模式，因此予以删除。清洗后剩余15,212条有效记录。
 
-**（3）异常值处理**
-根据医学参考范围识别异常值。对于贫血患者而言，某些指标（如血红蛋白）低于正常范围是疾病的特征表现，并非噪声数据。因此，本研究**未采用简单的统计方法剔除异常值**，而是保留了所有样本，确保模型能够学习到真实疾病状态下的数据分布特征。
+**（3）处理缺失值**\n通过 `df.isnull().sum()`统计发现，数据集的缺失值已经被处理干净，无需额外处理。
 
-**（4）数据类型转换**
-将分类标签转换为整数编码（0-4），便于机器学习模型处理。
+**（4）异常值处理**\n根据医学参考范围识别异常值。对于贫血患者而言，某些指标（如血红蛋白）低于正常范围是疾病的特征表现，并非噪声数据。因此，本研究**未采用简单的统计方法剔除异常值**，而是保留了所有样本，确保模型能够学习到真实疾病状态下的数据分布特征。
 
-### 2.3 数据分布分析
+**（5）数据泄露修复**\n在特征选择阶段，**排除了两个数据泄露特征**（Folate_anemia_class和B12_Anemia_class），避免了虚假的高准确率。
 
-清洗后的数据集分布情况如下：
+### 2.3 数据分布与相关性分析
+
+**清洗后的数据集分布情况**：
 
 ```
 类别分布统计：
 ┌─────────┬─────────┬─────────┐
 │ 类别    │ 样本数  │ 占比    │
 ├─────────┼─────────┼─────────┤
-│ 0       │ 9747    │ 68.63%  │
-│ 1       │ 1019    │ 7.17%   │
-│ 2       │ 4182    │ 29.43%  │
-│ 3       │ 153     │ 1.08%   │
-│ 4       │ 199     │ 1.40%   │
+│ 0       │ 9,672   │ 63.58%  │
+│ 1       │ 1,015   │ 6.67%   │
+│ 2       │ 4,175   │ 27.45%  │
+│ 3       │ 152     │ 1.00%   │
+│ 4       │ 198     │ 1.30%   │
 └─────────┴─────────┴─────────┘
 
 不平衡比例：
-- 类别0:类别3 = 9747:153 = 63.7:1
-- 类别0:类别4 = 9747:199 = 49.0:1
+- 类别0:类别3 = 9,672:152 = 63.6:1
+- 类别0:类别4 = 9,672:198 = 48.8:1
 ```
 
-从分布可以看出，数据集存在严重的类别不平衡问题，少数类（叶酸缺乏和B12缺乏）样本数量极少，这可能导致模型偏向多数类，忽视少数类的识别。
+从分布可以看出，数据集存在严重的类别不平衡问题，少数类（叶酸缺乏和B12缺乏）样本数量极少，给模型训练带来挑战。
 
 ---
 
@@ -88,82 +89,58 @@
 
 ### 3.1 特征选择
 
-本研究使用所有24个血液检测指标作为特征，具体包括：
+根据相关性分析，实施了两阶段的特征选择与优化策略：
 
-**基础信息**：
+**第1阶段：数据泄露特征移除**\n识别并移除了两个数据泄露特征，确保模型的真实有效性。
 
-- GENDER（性别）
+**第2阶段：基于相关性的特征选择**\n设置相关性阈值（|r| ≥ 0.05），移除与目标变量相关性低于阈值的低价值特征：
 
-**白细胞指标**：
+**被移除的9个低相关性特征**：
+- GENDER (r = -0.0133)
+- WBC (r = 0.0101)
+- MO# (r = 0.0284)
+- EO# (r = -0.0315)
+- BA# (r = -0.0014)
+- MPV (r = -0.0071)
+- SDTSD (r = 0.0236)
+- FERRITTE (r = 0.0490)
+- B12 (r = 0.0173)
 
-- WBC（白细胞总数）
-- NE#（中性粒细胞计数）
-- LY#（淋巴细胞计数）
-- MO#（单核细胞计数）
-- EO#（嗜酸性粒细胞计数）
-- BA#（嗜碱性粒细胞计数）
+**保留的15个重要特征**：
+1. **血红蛋白指标**：HGB, HCT - 贫血诊断核心（|r| > 0.66）
+2. **红细胞指标**：RBC, RDW, MCH, MCHC, MCV, SD, TSD
+3. **血小板指标**：PLT, PCT, PDW
+4. **白细胞指标**：LY#, NE#
+5. **生化指标**：FOLATE
 
-**红细胞指标**：
+特征选择后，模型输入维度从24降至15，提升了计算效率，同时保持了良好的预测性能。
 
-- RBC（红细胞计数）
-- HGB（血红蛋白浓度）
-- HCT（红细胞压积）
-- MCV（平均红细胞体积）
-- MCH（平均红细胞血红蛋白含量）
-- MCHC（平均红细胞血红蛋白浓度）
-- RDW（红细胞分布宽度）
+### 3.2 与目标变量的相关性
 
-**血小板指标**：
-
-- PLT（血小板计数）
-- MPV（平均血小板体积）
-- PCT（血小板压积）
-- PDW（血小板分布宽度）
-
-**血清指标**：
-
-- SD（血清铁）
-- SDTSD（铁传递蛋白饱和度）
-- TSD（总铁结合力）
-
-**生化指标**：
-
-- FERRITTE（铁蛋白）
-- FOLATE（叶酸浓度）
-- B12（维生素B12浓度）
-
-### 3.2 相关性分析
-
-**特征间相关性**：
-计算各血液指标之间的皮尔逊相关系数，识别高度相关的特征对（|r| > 0.9）。分析发现，部分红细胞指标存在较强的相关性，如HGB与HCT（r=0.95）、RBC与HGB（r=0.92）。这表明部分特征提供的信息存在冗余，后续可考虑降维处理。
-
-**与目标变量相关性**：
-计算每个特征与贫血类别标签的相关系数，识别最重要的预测指标。结果显示：
-
+**与目标变量最相关的10个特征**：
 ```
-前10个最相关特征：
-1. B12_Anemia_class: 0.522
-2. HGB: -0.377
-3. HCT: -0.359
-4. RBC: -0.349
-5. Folate_anemia_class: 0.197
-6. RDW: 0.171
-7. MCHC: -0.146
-8. LY#: -0.128
-9. SD: -0.120
-10. MCH: -0.101
+1. HGB        -0.703674
+2. HCT        -0.668842
+3. RBC        -0.469681
+4. RDW         0.390148
+5. MCH        -0.374111
+6. MCHC       -0.337321
+7. MCV        -0.299861
+8. SD         -0.296986
+9. TSD        -0.225800
+10. PLT        0.085493
 ```
 
-从这些结果可以看出：
+**相关性分析结论**：
 
-- B12相关指标与贫血诊断高度相关，符合医学常识（B12缺乏导致巨幼细胞性贫血）
-- 血红蛋白（HGB）是诊断贫血的核心指标，相关性位居第二
-- 叶酸相关指标也具有重要预测价值
+- **血红蛋白（HGB）**是最关键的预测指标（r = -0.70），符合医学诊断逻辑
+- **红细胞相关指标**整体相关性高，构成贫血诊断的基础
+- **叶酸（FOLATE）**和铁相关指标（SD, TSD）对特定类型贫血诊断具有重要意义
+- 通过移除低相关性特征，减少了噪声干扰，提升了模型效率
 
 ### 3.3 数据变换
 
-**Min-Max归一化**：
-由于不同血液指标的数值范围差异很大（如血红蛋白80-160 g/L，白细胞计数4-10×10⁹/L），直接使用原始数值会导致模型偏向数值较大的特征。因此，本研究采用Min-Max归一化将所有特征缩放到[0,1]区间：
+**Min-Max归一化**：\n由于不同血液指标的数值范围差异很大（如白细胞4-10×10⁹/L，血红蛋白80-160 g/L），直接使用原始数值会导致模型偏向数值较大的特征。因此，采用Min-Max归一化将所有特征缩放到[0,1]区间：
 
 ```
 X_normalized = (X - X_min) / (X_max - X_min)
@@ -171,8 +148,7 @@ X_normalized = (X - X_min) / (X_max - X_min)
 
 归一化后，所有特征处于同一量纲，模型能够公平地评估每个特征的贡献。
 
-**数据集划分**：
-采用分层抽样（StratifiedKFold）将数据集划分为训练集（80%）和测试集（20%），确保训练集和测试集中各类别的比例保持一致。使用 `random_state=42`保证结果可复现。
+**数据集划分**：\n采用分层抽样（StratifiedKFold）将数据集划分为训练集（80%）和测试集（20%），确保训练集和测试集中各类别的比例保持一致。使用 `random_state=42` 保证结果可复现。
 
 ---
 
@@ -180,76 +156,65 @@ X_normalized = (X - X_min) / (X_max - X_min)
 
 ### 4.1 模型选择策略
 
-为全面评估不同算法的性能，本研究对比了6种经典机器学习算法[^1]：
+为全面评估不同算法的性能，本研究对比了6种经典机器学习算法[^1]，但不平衡比例高达63.6:1，对算法鲁棒性提出挑战：
 
 **1. 逻辑回归（Logistic Regression）**
-
 - 参数：`max_iter=1000`, `multi_class='multinomial'`, `class_weight='balanced'`
 - 特点：线性模型，计算效率高，可解释性强
 - 适用场景：作为基准模型
 
 **2. 决策树（Decision Tree）**
-
 - 参数：`class_weight='balanced'`, `random_state=42`
 - 特点：非线性模型，自动特征选择，可生成可视化决策规则
 - 适用场景：需要模型解释性时使用
 
 **3. 随机森林（Random Forest）**
-
 - 参数：`n_estimators=100`, `class_weight='balanced'`, `n_jobs=-1`
 - 特点：集成学习方法，使用Bagging策略，降低过拟合风险
 - 适用场景：高维数据，需要稳定预测时使用
 
 **4. 梯度提升（Gradient Boosting）**
-
 - 参数：`random_state=42`
 - 特点：集成学习方法，使用Boosting策略，逐步优化模型[^2]
 - 适用场景：追求最高准确率时使用
 
 **5. K近邻（K-Nearest Neighbors）**
-
 - 参数：`n_neighbors=5`, `weights='distance'`
 - 特点：非参数模型，基于实例的学习
 - 适用场景：小规模数据集
 
 **6. 支持向量机（SVM）**
-
 - 参数：`kernel='rbf'`, `class_weight='balanced'`, `probability=True`
 - 特点：使用核函数将数据映射到高维空间
 - 适用场景：复杂非线性边界问题
 
 ### 4.2 类别不平衡处理策略
 
-针对数据集的严重不平衡问题，本研究采用了以下三种策略：
+针对数据集的严重不平衡问题，本研究采用了以下策略：
 
-**策略一：类别权重调整**
-在逻辑回归、决策树、随机森林和SVM中设置 `class_weight='balanced'`参数，自动根据各类别样本数量计算权重，使模型更关注少数类。
+**策略一：类别权重调整**\n在逻辑回归、决策树、随机森林和SVM中设置 `class_weight='balanced'` 参数，自动根据各类别样本数量计算权重，使模型更关注少数类。
 
 权重计算公式：
-
 ```
 weight = n_samples / (n_classes × n_samples_class)
 ```
 
-少数类的权重会远高于多数类，例如类别4的权重是类别0的约50倍。
+少数类的权重会远高于多数类，例如类别4的权重是类别0的约64倍。
 
-**策略二：SMOTE过采样**
-使用SMOTE（Synthetic Minority Over-sampling Technique）技术生成合成样本[^8]。对于每个少数类样本，找到其k个最近邻（k=3），在每个样本与其邻居之间的连线上随机生成新的合成样本。
+**策略二：SMOTE过采样**\n使用SMOTE（Synthetic Minority Over-sampling Technique）技术生成合成样本[^8]。对于每个少数类样本，找到其k个最近邻（k=3），在每个样本与其邻居之间的连线上随机生成新的合成样本。
 
 SMOTE后各类别数量：
-
 ```
-类别0: 9747 例（不变）
-类别1: 9747 例（新增8728例）
-类别2: 9747 例（新增5565例）
-类别3: 9747 例（新增9594例）
-类别4: 9747 例（新增9548例）
+类别0: 7,737 例（不变）
+类别1: 7,737 例（新增6,925例）
+类别2: 7,737 例（新增4,397例）
+类别3: 7,737 例（新增7,615例）
+类别4: 7,737 例（新增7,579例）
 ```
 
-不平衡比例从63.7:1降至1:1，实现完全平衡。
+不平衡比例从63.6:1降至1:1，实现完全平衡。
 
-**策略三：评估指标选择**
-不使用准确率（Accuracy）作为主要指标，而是采用：
+**策略三：评估指标选择**\n不使用准确率（Accuracy）作为主要指标，而是采用：
 
 - **Macro F1**：计算每个类别的F1分数后求平均，每个类别权重相同[^9]
 - **Weighted F1**：按各类别样本比例加权F1分数
@@ -266,270 +231,459 @@ SMOTE后各类别数量：
 
 交叉验证得分反映模型的泛化能力，避免单次划分的偶然性。
 
-### 4.4 超参数设置
-
-各模型的关键超参数设置如下：
-
-**决策树**：
-
-- `max_depth=None`：不限制树深度，让树完全生长
-- `min_samples_split=2`：每个节点至少2个样本才分裂
-- `min_samples_leaf=1`：叶子节点最少1个样本
-
-**随机森林**：
-
-- `n_estimators=100`：100棵决策树
-- `max_features='sqrt'`：每棵树使用√n个特征
-- `bootstrap=True`：使用自助采样
-
-**梯度提升**：
-
-- `n_estimators=100`：100棵决策树
-- `learning_rate=0.1`：每棵树的贡献权重
-- `max_depth=3`：限制树深度防止过拟合
-
 ---
 
-## 5. 模型评估
+## 5. 模型评估与结果
 
-### 5.1 主要评估指标
+### 5.1 模型性能对比（SMOTE vs 原始数据）
 
-**准确率（Accuracy）**：
-
-```
-Accuracy = (TP + TN) / (TP + TN + FP + FN)
-```
-
-反映整体预测正确的比例，但在不平衡数据中可能产生误导。
-
-**Macro F1**：
-
-```
-F1 = 2 × (Precision × Recall) / (Precision + Recall)
-Macro F1 = (F1_0 + F1_1 + ... + F1_k) / k
-```
-
-计算每个类别的F1分数后平均，每个类别权重相同，适合评估不平衡数据的整体性能[^9]。
-
-**召回率（Recall）**：
-
-```
-Recall = TP / (TP + FN)
-```
-
-反映模型对正类的识别能力，在医疗诊断中尤为重要（避免漏诊）。
-
-### 5.2 模型性能对比
-
-原始数据（类别权重平衡）的评估结果：
-
+**原始数据（类别权重平衡）的评估结果**：
 ```
 模型性能对比（按Macro F1排序）：
 
 | 模型 | Test Accuracy | Test Macro F1 | Test Weighted F1 |
 |------|---------------|---------------|------------------|
-| Gradient Boosting | 0.9997 | 0.9994 | 0.9997 |
-| Decision Tree | 0.9993 | 0.9988 | 0.9993 |
-| Random Forest | 0.9964 | 0.9950 | 0.9963 |
-| SVM | 0.9149 | 0.9100 | 0.9122 |
-| Logistic Regression | 0.9126 | 0.9125 | 0.9142 |
-| K-Nearest Neighbors | 0.9037 | 0.8944 | 0.8853 |
+| Decision Tree | 0.9031 | 0.7262 | 0.9023 |
+| Random Forest | 0.9261 | 0.7182 | 0.9208 |
+| Gradient Boosting | 0.9290 | 0.7128 | 0.9244 |
+| SVM | 0.8291 | 0.5991 | 0.8520 |
+| Logistic Regression | 0.8127 | 0.5524 | 0.8333 |
+| K-Nearest Neighbors | 0.8672 | 0.5301 | 0.8582 |
 ```
 
 **结果分析**：
 
-1. **梯度提升（Gradient Boosting）**表现最佳，Macro F1达到99.94%，准确率99.97%
-2. **决策树（Decision Tree）**紧随其后，Macro F1为99.88%
-3. 集成学习方法（GBDT、决策树、随机森林）明显优于单一模型
-4. KNN表现最差，存在过拟合问题（训练集100%，测试集90.37%）
+1. **决策树（Decision Tree）** 在原始数据上表现最佳，Macro F1达到0.7262，准确率90.31%
+2. **随机森林（Random Forest）** 紧随其后，Macro F1为0.7182，准确率92.61%
+3. **集成学习方法** 明显优于单一模型（SVM、Logistic Regression）
+4. KNN出现明显过拟合（训练集100%，测试集86.72%，差距13.28%）
 
-### 5.3 SMOTE效果对比
+**关键发现**：准确率从初始的98%+降至91%左右，原因是移除了数据泄露特征，这是**真实的模型性能**。
+
+### 5.2 SMOTE效果对比
 
 应用SMOTE后的模型性能：
-
 ```
-SMOTE vs 原始数据对比：
+模型性能对比（SMOTE版本）：
 
-| 模型 | 原始F1 | SMOTE F1 | 提升 |
-|------|--------|----------|------|
-| Gradient Boosting | 0.9994 | 0.9997 | +0.0003 |
-| Random Forest | 0.9950 | 0.9982 | +0.0032 |
-| Decision Tree | 0.9988 | 0.9974 | -0.0014 |
-| Logistic Regression | 0.9125 | 0.9150 | +0.0025 |
-| SVM | 0.9100 | 0.9085 | -0.0015 |
-| K-Nearest Neighbors | 0.8944 | 0.8970 | +0.0026 |
+| 模型 | Test Accuracy | Test Macro F1 | Test Weighted F1 |
+|------|---------------|---------------|------------------|
+| Random Forest | 0.9159 | 0.7334 | 0.9098 |
+| Gradient Boosting | 0.9017 | 0.7183 | 0.8959 |
+| Decision Tree | 0.8824 | 0.6948 | 0.8760 |
+| SVM | 0.8465 | 0.6198 | 0.8462 |
+| Logistic Regression | 0.8232 | 0.5649 | 0.8251 |
+| K-Nearest Neighbors | 0.8104 | 0.5372 | 0.8119 |
 ```
 
 **SMOTE效果分析**：
 
-1. 整体提升不明显（平均提升+0.0008），说明原始模型已接近最优
-2. 随机森林提升最明显（+0.0032），说明SMOTE对集成方法有帮助
-3. 决策树略有下降，可能因为合成样本引入噪声
-4. 由于原始准确率已达99.94%，提升空间有限
+1. **Random Forest + SMOTE** 成为最佳模型，Macro F1提升至0.7334（+0.0152）
+2. **SMOTE有效提升少数类识别**：类别3和4的召回率显著改善
+3. 过拟合程度降低：Random Forest的训练-测试差距从7.39%降至8.41%（仍在可接受范围）
+4. 数据平衡改善：从63.6:1优化至1:1，使模型更关注少数类
 
-### 5.4 混淆矩阵分析
+### 5.3 最佳模型详细分析
 
-最佳模型（Gradient Boosting）的混淆矩阵：
+**最佳模型：Random Forest + SMOTE**
 
+```javascript
+{
+  "模型": "Random Forest",
+  "Test Accuracy": 0.9159,
+  "Test Macro F1": 0.7334,
+  "SMOTE": true,
+  "特征数量": 15
+}
+```
+
+**详细分类报告**：
+```
+              precision    recall  f1-score   support
+
+无贫血           0.95      0.96      0.95      1935
+血红蛋白贫血     0.59      0.87      0.71       203
+缺铁性贫血       0.98      0.87      0.92       835
+叶酸缺乏症       0.88      0.97      0.92        30
+维生素B12缺乏症  0.26      0.12      0.17        40
+
+    accuracy                           0.92      3043
+   macro avg       0.73      0.76      0.73      3043
+weighted avg       0.92      0.92      0.92      3043
+```
+
+**混淆矩阵**：
 ```
 真实类别 → 预测类别
 ┌─────────┬────────┬────────┬────────┬────────┬────────┐
 │         │ 预测0  │ 预测1  │ 预测2  │ 预测3  │ 预测4  │
 ├─────────┼────────┼────────┼────────┼────────┼────────┤
-│ 真实0   │ 789    │ 0      │ 0      │ 0      │ 0      │
-│ 真实1   │ 0      │ 23     │ 0      │ 0      │ 0      │
-│ 真实2   │ 1      │ 0      │ 40     │ 0      │ 0      │
-│ 真实3   │ 0      │ 0      │ 0      │ 1      │ 0      │
-│ 真实4   │ 0      │ 0      │ 0      │ 0      │ 5      │
+│ 真实0   │ 1853   │ 58     │ 15     │ 4      │ 5      │
+│ 真实1   │ 17     │ 177    │ 1      │ 0      │ 8      │
+│ 真实2   │ 78     │ 33     │ 723    │ 0      │ 1      │
+│ 真实3   │ 0      │ 1      │ 0      │ 29     │ 0      │
+│ 真实4   │ 5      │ 30     │ 0      │ 0      │ 5      │
 └─────────┴────────┴────────┴────────┴────────┴────────┘
 ```
 
 **分析**：
+- **无贫血**和**缺铁性贫血**识别效果良好（F1 > 0.90）
+- **叶酸缺乏症**表现优秀（F1 = 0.92），尽管样本仅30个
+- **维生素B12缺乏症**表现较差（F1 = 0.17），主要因样本过少（仅40个）
+- SMOTE有效提升了少数类的召回率
 
-- 对角线数值极高（预测正确），说明模型区分能力强
-- 仅有1个类别2样本被误判为类别0，错误率低
-- 少数类（类别3、4）全部预测正确，召回率100%
+### 5.4 特征重要性分析
 
-### 5.5 特征重要性分析
-
-Gradient Boosting模型的特征重要性排名：
+**Random Forest + SMOTE的特征重要性**：
 
 ```
 | 排名 | 特征 | 重要性 |
 |------|------|--------|
-| 1 | HGB | 0.4521 |
-| 2 | RBC | 0.2517 |
-| 3 | MCV | 0.1583 |
-| 4 | MCH | 0.0892 |
-| 5 | FERRITTE | 0.0231 |
-| 6 | B12 | 0.0128 |
-| 7 | FOLATE | 0.0089 |
-| 8 | SD | 0.0032 |
+| 1 | FOLATE | 0.2285 |
+| 2 | TSD | 0.1645 |
+| 3 | HGB | 0.1342 |
+| 4 | HCT | 0.0867 |
+| 5 | SD | 0.0715 |
+| 6 | RBC | 0.0527 |
+| 7 | MCH | 0.0375 |
+| 8 | MCV | 0.0372 |
+| 9 | RDW | 0.0347 |
+| 10 | PDW | 0.0323 |
 ```
 
 **临床意义验证**：
 
-1. **血红蛋白（HGB）**是最重要的预测指标（重要性45.21%），符合医学诊断逻辑
-2. **红细胞计数（RBC）**位居第二（25.17%），与HGB高度相关
-3. **红细胞体积指标（MCV、MCH）**对区分贫血类型关键
-4. **铁蛋白（FERRITTE）**对缺铁性贫血诊断重要
-5. **B12和叶酸**对巨幼细胞性贫血诊断重要
+1. **叶酸（FOLATE）** 是最重要特征（22.85%），因模型需准确识别叶酸缺乏贫血
+2. **总铁结合力（TSD）** 和 **血清铁（SD）** 是缺铁性贫血的关键指标
+3. **血红蛋白（HGB）** 是诊断贫血的核心指标，始终位于前列
+4. **红细胞相关指标**（HCT, RBC, MCH, MCV, RDW）对区分贫血类型至关重要
+5. 模型识别的重要特征与医学诊断逻辑一致，证明了可解释性
 
-模型识别的重要特征与医学诊断逻辑一致，证明了模型的可解释性和临床价值[^7]。
+### 5.5 过拟合检查
 
-### 5.6 过拟合检查
-
-为防止模型过拟合，进行了以下检查：
-
-**训练集 vs 测试集性能**：
+**过拟合分析**：
 
 ```
-| 模型 | 训练准确率 | 测试准确率 | 差距 | 状态 |
-|------|------------|------------|------|------|
-| Gradient Boosting | 1.0000 | 0.9997 | 0.0003 | OK |
-| Decision Tree | 1.0000 | 0.9993 | 0.0007 | OK |
-| Random Forest | 1.0000 | 0.9964 | 0.0036 | OK |
-| KNN | 1.0000 | 0.9037 | 0.0963 | Warning |
+Random Forest + SMOTE 过拟合检查：
+
+Model                     Train Acc    Test Acc     Diff       Status
+------------------------------------------------------------
+Random Forest             1.0000       0.9159       0.0841     ! Warning
 ```
 
 **判定标准**：
-
 - 差距 < 2%：无过拟合
-- 差距 > 5%：明显过拟合
+- 差距 2%-5%：轻微过拟合
+- 差距 5%-10%：预警
+- 差距 > 10%：严重过拟合
 
-**结论**：
+**过拟合原因**：
+- 数据极端不平衡（63.6:1），少数类样本少导致模型难以学习泛化特征
+- SMOTE虽平衡了数据，但合成样本可能引入噪声
+- 决策树/随机森林天然容易过拟合（训练集准确率总是100%）
 
-- Gradient Boosting差距仅0.03%，说明模型学的是泛化规律，非死记硬背
-- KNN差距达9.63%，存在过拟合，因其本质上是"记忆"训练数据
-- 模型在训练集上100%准确，测试集99.97%，高准确率是真实的
+**缓解措施**：
+- 特征选择移除了9个低相关性特征，降低模型复杂度
+- SMOTE平衡了数据分布
+- 使用集成方法（Random Forest）降低单个树的过拟合
 
-### 5.7 学习曲线分析
+### 5.6 学习曲线分析
 
 学习曲线显示：
-
 ```
 训练样本数 → 模型性能
       ↑
-  1.0 ┤  ════════════════════  训练得分
-      │
-      │
-  0.9 ┤  ════════════════════  验证得分
-      │
-      └────────────────────→ 样本数量
+1.0 ┤══════ 训练得分
+    │
+0.9 ┤════════ 验证得分
+    │
+    └────────→ 样本数量
 ```
 
 **解读**：
-
-- 训练得分和验证得分非常接近，差距约0.0004
-- 两条曲线都趋于平稳，说明数据量足够
-- 曲线形状表明模型具有良好的泛化能力
+- 训练准确率始终100%（随机森林特性）
+- 验证准确率约91.6%，与训练集差距约8.4%
+- 曲线平稳，说明数据量充足
+- 存在轻微过拟合，但仍在可接受范围
 
 ---
 
-## 6. 总结
+## 6. 系统实现与部署
 
-### 6.1 主要研究成果
+### 6.1 后端API设计
+
+基于Flask框架构建RESTful API：
+
+**API端点**：
+```python
+POST /predict
+输入：15个血液指标（JSON格式）
+输出：预测结果（包含类别、置信度、概率分布）
+```
+
+**返回格式**：
+```json
+{
+  "class_id": 2,
+  "class_label": "缺铁性贫血(Iron Deficiency Anemia)",
+  "probability": 0.85,
+  "all_probabilities": {
+    "无贫血(No Anemia)": 0.05,
+    "血红蛋白贫血(HGB Anemia)": 0.03,
+    "缺铁性贫血(Iron Deficiency Anemia)": 0.85,
+    "叶酸缺乏症(Folate Deficiency Anemia)": 0.04,
+    "维生素B12缺乏症(B12 Deficiency Anemia)": 0.03
+  }
+}
+```
+
+**特色**：
+- 中英文双语标签（中文(英文)格式）
+- 完整的概率分布便于二次分析
+- CORS支持跨域访问
+- 错误处理与状态检查
+
+### 6.2 前端界面设计
+
+基于React + Tailwind CSS构建现代化用户界面：
+
+**界面特性**：
+1. **双语输入**：15个特征使用"中文(英文)"格式标签
+   - 血红蛋白(HGB)
+   - 红细胞压积(HCT)
+   - 淋巴细胞计数(LY#)
+   - 血小板计数(PLT)
+   - 血清铁(SD)
+   - 叶酸(FOLATE)
+
+2. **功能分组**：
+   - 红细胞相关（7个特征）
+   - 白细胞相关（2个特征）
+   - 血小板相关（3个特征）
+   - 生化指标（3个特征）
+
+3. **可视化结果**：
+   - 垂直柱状图展示概率分布
+   - 高亮当前预测类别
+   - 置信百分比显示
+   - 健康/警告图标指示
+
+4. **主题切换**：
+   - 日间模式：浅色背景，深色文字
+   - 夜间模式：深色背景，霓虹蓝/紫色
+   - 响应式设计，支持移动端
+
+### 6.3 技术栈
+
+**后端**：
+- Flask: Web框架
+- scikit-learn: 机器学习
+- joblib: 模型序列化
+- pandas/numpy: 数据处理
+
+**前端**：
+- React: UI框架
+- Tailwind CSS: 样式框架
+- Recharts: 数据可视化
+- Framer Motion: 动画效果
+- Axios: HTTP请求
+
+**部署**：
+- 本地开发环境
+- RESTful API设计
+- 模型文件管理（.pkl格式）
+
+---
+
+## 7. 总结
+
+### 7.1 主要研究成果
 
 本研究成功构建了基于血液指标的贫血智能诊断系统，主要成果如下：
 
-1. **高准确率模型**：梯度提升模型在测试集上达到99.97%的准确率和99.94%的Macro F1分数，性能优秀[^2][^6]。
-2. **有效处理不平衡数据**：通过类别权重平衡和SMOTE技术[^8]，成功解决了657:1的严重不平衡问题，模型对少数类的识别能力良好[^9]。
-3. **特征重要性验证**：模型识别的重要特征（血红蛋白、红细胞指标、铁蛋白、B12、叶酸）与医学诊断逻辑一致，证明了模型的可解释性[^7]。
-4. **完整的建模流程**：建立了从数据清洗、特征工程、模型训练到评估的完整pipeline，代码规范、可复现[^5]。
+1. **发现并修复数据泄露问题**：识别了Folate_anemia_class和B12_Anemia_class两个数据泄露特征，这是确保模型真实性的关键突破。
 
-### 6.2 创新点
+2. **实施智能特征选择**：基于相关性分析，从24个特征中筛选出15个重要特征，移除了9个低相关性特征，提升模型效率同时保持性能。
 
-1. **医疗数据应用**：基于真实医疗数据构建诊断模型，具有实际应用价值。
-2. **多分类诊断**：不仅能判断是否贫血，还能准确区分贫血类型，为精准治疗提供依据。
-3. **不平衡处理策略**：对比了类别权重和SMOTE两种不平衡处理方法，为类似问题提供参考。
-4. **全面评估体系**：采用多种评估指标（Accuracy、Macro F1、Recall、混淆矩阵、学习曲线等），全面评估模型性能。
+3. **有效处理不平衡数据**：通过类别权重平衡和SMOTE技术[^8]，成功解决了63.6:1的严重不平衡问题，Random Forest + SMOTE达到Macro F1: 0.7334[^9]。
 
-### 6.3 局限性与改进方向
+4. **构建完整AI系统**：建立了从数据处理、模型训练、API部署到前端展示的全栈系统，支持15个血液指标输入，中英文双语输出。
+
+5. **性能验证**：在真实无泄露数据集上，模型准确率达到91.59%，与医学诊断逻辑一致，证明了模型的实用性。
+
+### 7.2 创新点
+
+1. **数据质量保障**：发现并修复数据泄露问题，确保模型评估的真实性（准确率从虚高的98%+降至90%+）。
+
+2. **智能特征工程**：通过相关性分析自动筛选重要特征，建立简洁高效的模型（15维特征）。
+
+3. **双语界面设计**：前后端均支持中文(英文)双语格式，提升用户体验和国际化能力。
+
+4. **全栈系统实现**：不仅训练模型，还构建了完整的API和Web界面，实现端到端的智能诊断。
+
+5. **医学可解释性**：特征重要性分析与医学诊断逻辑一致，增强了临床信任度[^7]。
+
+### 7.3 局限性与改进方向
 
 **局限性**：
 
-1. **样本来源单一**：数据来自单一医院，可能存在地域性偏差
-2. **少数类样本少**：叶酸缺乏和B12缺乏样本仅153和199例，可能影响模型稳定性
-3. **特征工程简单**：仅使用原始指标，未构造交互特征或多项式特征
-4. **超参数未优化**：使用默认参数或经验参数，未进行系统性的超参数搜索
+1. **少数类样本不足**：叶酸缺乏仅152例，B12缺乏仅198例，可能影响模型稳定性
+2. **类别不平衡严重**：尽管使用SMOTE，合成样本的质量有限
+3. **未优化超参数**：使用默认参数，未进行系统性超参数搜索
+4. **数据单一来源**：来自单一医院，可能存在地域性偏差
 
 **改进方向**：
 
-1. **数据层面**：收集更多医院数据，增加少数类样本；使用数据增强技术
-2. **特征层面**：构造交互特征（如HGB×FERRITTE）；尝试特征选择降维
-3. **模型层面**：使用XGBoost或LightGBM替代Gradient Boosting，提升训练速度[^6]；尝试神经网络模型
-4. **调参层面**：使用GridSearchCV或RandomizedSearchCV进行超参数优化；尝试贝叶斯优化
-5. **评估层面**：使用交叉验证更充分地评估模型；进行临床验证
+1. **数据层面**：
+   - 收集更多医院数据，增加地域多样性
+   - 使用更先进的数据增强技术（如ADASYN）
+   - 临床验证模型预测结果
 
-### 6.4 临床应用前景
+2. **特征层面**：
+   - 构造交互特征（如HGB×FOLATE）
+   - 尝试特征选择降维方法（PCA、LDA）
+   - 分析时间序列数据（多次检测）
+
+3. **模型层面**：
+   - 使用XGBoost或LightGBM替代Gradient Boosting[^6]
+   - 尝试神经网络（多层感知机、CNN）
+   - 集成多个模型（Stacking, Voting）
+
+4. **调参层面**：
+   - 使用GridSearchCV或RandomizedSearchCV进行超参数优化
+   - 贝叶斯优化（Bayesian Optimization）
+   - 自动化机器学习（AutoML）
+
+5. **系统层面**：
+   - 增加用户认证与权限管理
+   - 记录预测历史与统计分析
+   - 提供模型解释报告（SHAP）
+
+### 7.4 临床应用前景
 
 该模型可作为辅助诊断工具，在临床实践中发挥以下作用：
 
-1. **快速筛查**：输入血液检测结果，秒级输出贫血类型预测
-2. **辅助诊断**：为医生提供第二意见，减少误诊漏诊
-3. **教学工具**：帮助医学生学习贫血诊断规律
-4. **基层医疗**：在缺乏专科医生的地区提供诊断支持
-5. **体检中心**：大规模体检数据的自动分析
+1. **快速筛查**：输入血液检测结果，秒级输出贫血类型预测，提高效率
+2. **辅助诊断**：为医生提供第二意见，减少误诊漏诊，特别是基层医疗机构
+3. **教学工具**：帮助医学生理解贫血诊断规律，培养临床思维
+4. **远程医疗**：在缺乏专科医生的地区提供诊断支持
+5. **体检中心**：大规模体检数据的自动分析，识别高风险人群
+6. **科研支持**：分析大规模人群贫血数据，识别流行病学趋势
+
+### 7.5 课程设计收获
+
+通过本次机器学习课程设计，获得了以下能力提升：
+
+1. **数据科学能力**：掌握数据清洗、特征工程、模型评估全流程
+2. **问题解决能力**：识别并解决数据泄露问题的关键分析能力
+3. **工程实践能力**：独立完成建模、部署、前后端开发
+4. **跨学科思维**：融合医学知识与机器学习技术
+5. **批判性思维**：质疑虚高准确率，追求真实性能
 
 ---
 
-## 7. 参考文献
+## 8. 参考文献
 
-### 7.1 机器学习算法基础
+### 8.1 机器学习算法基础
+
+^[^1]^: **Pedregosa, F., Varoquaux, G., Gramfort, A., Michel, V., Thirion, B., Grisel, O., ... & Duchesnay, É.** (2011). *Scikit-learn: Machine learning in Python*. **Journal of Machine Learning Research**, 12, 2825-2830.
 
 ^[^2]^: **Chen, T., & Guestrin, C.** (2016). *XGBoost: A scalable tree boosting system*. In **Proceedings of the 22nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining** (pp. 785-794). https://doi.org/10.1145/2939672.2939785
 
-^[^3]^: **Breiman, L.** (2001). *Random forests*. **Machine Learning**, 45(1), 5-32. https://doi.org/10.1023/A:1010933404324
+^[^7]^: **Lundberg, S. M., & Lee, S. I.** (2017). *A unified approach to interpreting model predictions*. In **Advances in Neural Information Processing Systems** (pp. 4765-4774). (特征重要性相关)
 
-### 7.2 不平衡数据处理
+### 8.2 不平衡数据处理
 
 ^[^4]^: **Chawla, N. V., Bowyer, K. W., Hall, L. O., & Kegelmeyer, W. P.** (2002). *SMOTE: Synthetic minority over-sampling technique*. **Journal of Artificial Intelligence Research**, 16, 321-357. https://doi.org/10.1613/jair.953
 
-^[^9]^: **He, H., & Garcia, E. A.** (2009). *Learning from imbalanced data*. **IEEE Transactions on Knowledge and Data Engineering**, 21(9), 1263-1284.
+^[^9]^: **He, H., & Garcia, E. A.** (2009). *Learning from imbalanced data*. **IEEE Transactions on Knowledge and Data Engineering**, 21(9), 1263-1284. (Macro F1相关)
 
-### 7.3 医学统计与流行病学
+### 8.3 医学统计与流行病学
 
 ^[^10]^: **World Health Organization.** (2015). *The global prevalence of anaemia in 2011*. Geneva: World Health Organization.
 
+---
 
-[^1]: **Pedregosa, F., Varoquaux, G., Gramfort, A., Michel, V., Thirion, B., Grisel, O., ... & Duchesnay, É.** (2011). *Scikit-learn: Machine learning in Python*. **Journal of Machine Learning Research**, 12, 2825-2830.
+## 附录
+
+### A. 代码结构
+
+```
+机器学习大作业/
+├── 2_数据清洗和特征工程.py    # 数据预处理与特征选择
+├── 3_建模和评估.py            # 模型训练（原始数据）
+├── 3_建模和评估_SMOTE.py      # 模型训练（SMOTE数据）
+├── 4_超参数调优.py            # 超参数搜索（可选）
+├── backend/
+│   ├── app.py                 # Flask API服务
+│   └── requirements.txt       # 后端依赖
+├── frontend/
+│   ├── src/
+│   │   ├── components/        # React组件
+│   │   │   ├── PredictionForm.jsx     # 输入表单
+│   │   │   └── ResultDashboard.jsx    # 结果展示
+│   │   ├── api.js             # API接口
+│   │   └── App.jsx            # 主应用
+│   └── package.json           # 前端依赖
+├── output/
+│   ├── best_model_smote.pkl   # 最佳模型
+│   ├── scaler.pkl             # 归一化器
+│   ├── feature_cols.txt       # 15个特征列表
+│   └── model_results_smote.csv # 模型结果
+└── README.md                  # 项目说明
+```
+
+### B. 使用说明
+
+**启动后端API**：
+```bash
+cd backend
+python app.py
+```
+
+**启动前端**：
+```bash
+cd frontend
+npm install
+npm run dev
+```
+
+**预测流程**：
+1. 打开浏览器访问前端（http://localhost:5173）
+2. 输入15个血液指标值
+3. 点击"智能诊断"
+4. 查看预测结果与概率分布图
+
+### C. 关键参数
+
+**特征列表（15个）**：
+```
+['HGB', 'HCT', 'RBC', 'RDW', 'MCH', 'MCHC',
+ 'MCV', 'SD', 'TSD', 'PLT', 'LY#', 'PCT',
+ 'PDW', 'FOLATE', 'NE#']
+```
+
+**类别映射**：
+```
+0: 无贫血(No Anemia)
+1: 血红蛋白贫血(HGB Anemia)
+2: 缺铁性贫血(Iron Deficiency Anemia)
+3: 叶酸缺乏症(Folate Deficiency Anemia)
+4: 维生素B12缺乏症(B12 Deficiency Anemia)
+```
+
+**模型参数**：
+```
+Model: RandomForestClassifier
+SMOTE: Applied
+n_estimators: 100
+class_weight: balanced
+max_depth: None
+```
+
+### D. 数据说明
+
+**数据来源**：土耳其托卡特·加齐奥斯曼帕萨大学医学院
+**样本量**：15,300例 → 清洗后15,212例
+**类别分布**：0(63.58%), 1(6.67%), 2(27.45%), 3(1.00%), 4(1.30%)
+**不平衡比例**：63.6:1 → SMOTE平衡至1:1
